--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
   <title>Individual project</title>
 </head>
 
